# wxVideoProcessing

./: .gitignore
CommonPluginBase/: CMakeLists.txt  CommonConfigWindowBase.cpp  CommonConfigWindowBase.h  CommonPlugin.h  SerializableBase.cpp  SerializableBase.h
CommonPluginBase/Win/: CommonPluginBase.vcxproj  CommonPluginBase.vcxproj.filters
MotionDetectorCore/: AmplifyFilter.cpp  AmplifyFilter.h  BackgroundFilter.cpp  BackgroundFilter.h  BarrelDistortionCorrectionFilter.cpp  BarrelDistortionCorrectionFilter.h  BrightnessContrastFilter.cpp  BrightnessContrastFilter.h  CMakeLists.txt  ContourFinder.cpp  ContourFinder.h  CropFilter.cpp  CropFilter.h  DisplayGeometryWindow.cpp  DisplayGeometryWindow.h  DummyFilter.cpp  DummyFilter.h  DynamicBGFilter.cpp  DynamicBGFilter.h  EqualizeHistFilter.cpp  EqualizeHistFilter.h  FilterFactory.cpp  FilterFactory.h  FilterPreviewWindow.cpp  FilterPreviewWindow.h  FilterTemplate.cpp  FilterTemplate.h  FlipFilter.cpp  FlipFilter.h  HighpassFilter.cpp  HighpassFilter.h  IFloorImagePreprocessor.cpp  IFloorImagePreprocessor.h  IFloorImagePreprocessorSettings.cpp  IFloorImagePreprocessorSettings.h  Image.h  InvertFilter.cpp  InvertFilter.h  KinectBGFilter.cpp  KinectBGFilter.h  (+37 more)
MotionDetectorCore/Win/: MotionDetectorCore.vcxproj  MotionDetectorCore.vcxproj.filters
MotionDetectorMultiCam/: CMakeLists.txt  MotionDetectorMultiCam.cpp  MotionDetectorMultiCam.def  MotionDetectorMultiCam.h  MotionDetectorMultiCam.pjd  MotionDetectorMultiCamExports.cpp  MotionDetectorMultiCamGuiPlugin.cpp  MotionDetectorMultiCamGuiPlugin.h  MotionDetectorMultiCamPlugin.cpp  MotionDetectorMultiCamPlugin.h  MultiCamCameraManager.cpp  MultiCamCameraManager.h  MultiCamSettingsPanel.cpp  MultiCamSettingsPanel.h
MotionDetectorMultiCam/Win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  MotionDetectorMultiCam.sln  MotionDetectorMultiCam.vcxproj  MotionDetectorMultiCam.vcxproj.filters  MotionDetectorMultiCamGui.vcxproj  MotionDetectorMultiCamGui.vcxproj.filters
MotionDetectorPluginBase/: CMakeLists.txt  GeometryProvider.cpp  GeometryProvider.h  IFloorCameraSettings.cpp  IFloorCameraSettings.h  MotionDetectorBase.cpp  MotionDetectorBase.h  MotionDetectorConfigWindowBase.cpp  MotionDetectorConfigWindowBase.h  MotionDetectorPlugin.h  MotionDetectorPluginBase.cpp  MotionDetectorPluginBase.h
MotionDetectorPluginBase/Win/: MotionDetectorPluginBase.vcxproj  MotionDetectorPluginBase.vcxproj.filters
Utils/: BlobToJSONFormatter.cpp  BlobToJSONFormatter.h  CMakeLists.txt  DiskInfo.cpp  DiskInfo.h  Guid.cpp  Guid.h  JSONObjectFactory.cpp  JSONObjectFactory.h  MACAddressUtility.cpp  MACAddressUtility.h  wxFPValidator.cpp  wxFPValidator.h  wxMACAddressUtility.h  wxTemplateClientData.h
Utils/Win/: Utils.vcxproj  Utils.vcxproj.filters
VideoSourceDirectShow/: CMakeLists.txt  VideoGrabberDirectShow.cpp  VideoGrabberDirectShow.h  VideoSourceDirectShow.def  VideoSourceDirectShowApp.cpp  VideoSourceDirectShowApp.h  VideoSourceDirectShowExports.cpp  VideoSourceDirectShowPlugin.cpp  VideoSourceDirectShowPlugin.h
VideoSourceDirectShow/DSNative/: Crossbar.cpp  Crossbar.h  Device.cpp  Device.h  DeviceManager.cpp  DeviceManager.h  Format.cpp  Format.h  FrameGrabber.cpp  FrameGrabber.h
VideoSourceDirectShow/DSNative/DirectShow/Include/: DSCategoryHelper.h  DSCommon.h  DSFilter.h  DSFilterGraphBase.h  DSFiltersDefinition.h  DSObjectBase.h
VideoSourceDirectShow/DSNative/DirectShow/Sources/: DSCategoryHelper.cpp  DSFileWriter.cpp  DSFilter.cpp  DSFilterGraphBase.cpp  DSObjectBase.cpp  DSSampleGrabber.cpp
VideoSourceDirectShow/Win/: Qedit.h  VideoSourceDirectShow.vcxproj  VideoSourceDirectShow.vcxproj.filters
VideoSourcePluginBase/: CMakeLists.txt  VideoGrabberBase.cpp  VideoGrabberBase.h  VideoSourceConfigWindowBase.cpp  VideoSourceConfigWindowBase.h  VideoSourcePlugin.h  VideoSourcePluginBase.cpp  VideoSourcePluginBase.h
VideoSourcePluginBase/Win/: VideoSourcePluginBase.vcxproj  VideoSourcePluginBase.vcxproj.filters
wxGuiPluginBase/: CMakeLists.txt
wxGuiPluginBase/Win/: wxGuiPluginBase.vcxproj  wxGuiPluginBase.vcxproj.filters
wxModularCore/: CMakeLists.txt  wxModularCore.h
wxModularCore/Win/: wxModularCore.vcxproj  wxModularCore.vcxproj.filters
wxModularHost/: CMakeLists.txt  MainFrame.cpp  SampleModularCore.cpp  wxModularHostApp.cpp
wxModularHost/Win/: wxModularHost.vcxproj  wxModularHost.vcxproj.filters
wxNonGuiPluginBase/: CMakeLists.txt
wxNonGuiPluginBase/Win/: wxNonGuiPluginBase.vcxproj  wxNonGuiPluginBase.vcxproj.filters
